@@ -5,7 +5,7 @@
 template<typename T> struct a
 {
     template <template <typename> class C, typename X, C<X>* =0>
-    struct b // { dg-error "class C' is not a template|is not a valid type" }
+    struct b
     {
     };
 };
@@ -13,7 +13,8 @@ template<typename T> struct a
 void
 foo ()
 {
-    a<int> v; // { dg-message "required from here" }
+  a<int> a1; // OK
+  a<int>::b<a,int> b1; // { dg-error "template argument" }
 }
 
-
+// { dg-prune-output "invalid type in declaration" }
