@@ -1,5 +1,9 @@
 2013-05-09  Jason Merrill  <jason@redhat.com>
 
+	PR c++/57222
+	* pt.c (lookup_template_class_1): Handle getting a template
+	template parameter as D1.
+
 	N3639 C++1y VLA diagnostics
 	* decl.c (grokdeclarator): Complain about reference, pointer, or
 	typedef to VLA.
